<?xml version="1.0"?>
<project
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>autoi18n</artifactId>
  <build>
    <extensions>
      <extension>
        <artifactId>os-maven-plugin</artifactId>
        <groupId>kr.motd.maven</groupId>
        <version>${os-plugin.version}</version>
      </extension>
    </extensions>
    <plugins>
      <plugin>
        <artifactId>quarkus-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>build</goal>
              <goal>generate-code</goal>
              <goal>generate-code-tests</goal>
            </goals>
          </execution>
        </executions>
        <extensions>true</extensions>
        <groupId>${quarkus.platform.group-id}</groupId>
        <version>${quarkus.platform.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>
            <arg>-parameters</arg>
          </compilerArgs>
        </configuration>
        <version>${compiler-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <systemPropertyVariables>
            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            <maven.home>${maven.home}</maven.home>
          </systemPropertyVariables>
        </configuration>
        <version>${surefire-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <systemPropertyVariables>
                <java.util.logging.manager>org.jboss.logmanager.LogManager
                </java.util.logging.manager>
                <maven.home>${maven.home}</maven.home>
                <native.image.path>${project.build.directory}/${project.build.finalName}-runner
                </native.image.path>
              </systemPropertyVariables>
            </configuration>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
        <version>${surefire-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <appendAssemblyId>false</appendAssemblyId>
          <attach>false</attach>
          <finalName>${project.artifactId}-${project.version}-${os.detected.classifier}</finalName>
          <outputDirectory>${project.build.directory}/distributions</outputDirectory>
          <skipAssembly>true</skipAssembly>
          <workDirectory>${project.build.directory}/assembly/work</workDirectory>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>single</goal>
            </goals>
            <id>make-distribution</id>
            <phase>package</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${assembly-plugin.version}</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>quarkus-arc</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <artifactId>quarkus-picocli</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <artifactId>jackson-databind</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>${lombok.version}</version>
    </dependency>
    <dependency>
      <artifactId>commons-lang3</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>${commons.lang3.version}</version>
    </dependency>
    <dependency>
      <artifactId>commons-io</artifactId>
      <groupId>commons-io</groupId>
      <version>${commons.io.version}</version>
    </dependency>
    <dependency>
      <artifactId>quarkus-junit5</artifactId>
      <groupId>io.quarkus</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>quarkus-junit5-mockito</artifactId>
      <groupId>io.quarkus</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>quarkus-jacoco</artifactId>
      <groupId>io.quarkus</groupId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>${quarkus.platform.artifact-id}</artifactId>
        <groupId>${quarkus.platform.group-id}</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${quarkus.platform.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <developers>
    <developer>
      <id>LBLucaBonetti</id>
      <name>Luca Bonetti</name>
    </developer>
  </developers>
  <groupId>it.lbsoftware</groupId>
  <modelVersion>4.0.0</modelVersion>
  <profiles>
    <profile>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <id>native</id>
      <properties>
        <quarkus.package.type>native</quarkus.package.type>
        <skipITs>false</skipITs>
      </properties>
    </profile>
    <profile>
      <activation>
        <property>
          <name>dist</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <configuration combine.self="append">
              <descriptors>
                <descriptor>src/main/assembly/assembly.xml</descriptor>
              </descriptors>
              <skipAssembly>false</skipAssembly>
            </configuration>
            <groupId>org.apache.maven.plugins</groupId>
          </plugin>
        </plugins>
      </build>
      <id>dist</id>
      <properties>
        <skipTests>true</skipTests>
      </properties>
    </profile>
    <profile>
      <activation>
        <os>
          <family>windows</family>
        </os>
      </activation>
      <id>dist-windows</id>
      <properties>
        <executable-suffix>.exe</executable-suffix>
      </properties>
    </profile>
    <profile>
      <build>
        <plugins>
          <plugin>
            <artifactId>jreleaser-maven-plugin</artifactId>
            <configuration>
              <jreleaser>
                <distributions>
                  <autoi18n>
                    <artifacts>
                      <artifact>
                        <path>
                          {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-linux-x86_64.tar.gz
                        </path>
                        <platform>linux-x86_64</platform>
                      </artifact>
                      <artifact>
                        <path>
                          {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-windows-x86_64.zip
                        </path>
                        <platform>windows-x86_64</platform>
                      </artifact>
                      <artifact>
                        <path>
                          {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-osx-x86_64.zip
                        </path>
                        <platform>osx-x86_64</platform>
                      </artifact>
                    </artifacts>
                    <type>BINARY</type>
                  </autoi18n>
                </distributions>
                <project>
                  <authors>Luca Bonetti</authors>
                  <copyright>2023 Luca Bonetti</copyright>
                  <description>autoi18n - A CLI tool to automatically translate words from a source
                    to one or multiple target languages and insert them into Property Resource
                    Bundles
                  </description>
                  <license>MIT</license>
                  <links>
                    <documentation>https://github.com/LBLucaBonetti/autoi18n</documentation>
                    <homepage>https://github.com/LBLucaBonetti/autoi18n</homepage>
                  </links>
                </project>
                <release>
                  <github>
                    <changelog>
                      <contributors>
                        <enabled>false</enabled>
                      </contributors>
                      <extraProperties>
                        <categorizeScopes>true</categorizeScopes>
                      </extraProperties>
                      <format>- {{commitShortHash}} {{commitTitle}}</format>
                      <formatted>ALWAYS</formatted>
                      <hide>
                        <categories>
                          <category>merge</category>
                        </categories>
                        <contributors>
                          <contributor>GitHub</contributor>
                          <contributor>dependabot</contributor>
                        </contributors>
                        <uncategorized>true</uncategorized>
                      </hide>
                      <preset>conventional-commits</preset>
                    </changelog>
                    <overwrite>true</overwrite>
                    <releaseName>{{projectVersion}}</releaseName>
                    <tagName>{{projectVersion}}</tagName>
                  </github>
                </release>
              </jreleaser>
            </configuration>
            <dependencies>
              <dependency>
                <artifactId>commons-io</artifactId>
                <groupId>commons-io</groupId>
                <version>${commons.io.version}</version>
              </dependency>
            </dependencies>
            <groupId>org.jreleaser</groupId>
            <version>${jreleaser-plugin.version}</version>
          </plugin>
        </plugins>
      </build>
      <id>release</id>
    </profile>
  </profiles>
  <properties>
    <artifactsDir>target/distributions</artifactsDir>
    <assembly-plugin.version>3.6.0</assembly-plugin.version>
    <commons-io.version>2.15.1</commons-io.version>
    <commons.lang3.version>3.14.0</commons.lang3.version>
    <compiler-plugin.version>3.11.0</compiler-plugin.version>
    <exec.mainClass>it.lbsoftware.autoi18n.Autoi18n</exec.mainClass>
    <executable-suffix/>
    <jreleaser-plugin.version>1.9.0</jreleaser-plugin.version>
    <lombok.version>1.18.30</lombok.version>
    <maven.compiler.release>21</maven.compiler.release>
    <os-plugin.version>1.7.1</os-plugin.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
    <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
    <quarkus.platform.version>3.5.3</quarkus.platform.version>
    <skipITs>true</skipITs>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.organization>lblucabonetti</sonar.organization>
    <surefire-plugin.version>3.2.2</surefire-plugin.version>
  </properties>
  <version>0.0.1</version>
</project>
